[gd_scene load_steps=2 format=3 uid="uid://c126r2gnxmotf"]

[ext_resource type="Script" path="res://set_password.gd" id="1_4447v"]

[node name="Set_Password" type="VBoxContainer"]
custom_minimum_size = Vector2(400, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
script = ExtResource("1_4447v")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2
columns = 2

[node name="Label" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Adress: www."
horizontal_alignment = 2

[node name="LineEdit_adress" type="LineEdit" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "webadressname.com"

[node name="Label2" type="Label" parent="GridContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Login Name:"
horizontal_alignment = 2

[node name="LineEdit_name" type="LineEdit" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "LoginName"

[node name="HSeparator2" type="HSeparator" parent="."]
layout_mode = 2

[node name="GridContainer2" type="GridContainer" parent="."]
layout_mode = 2
columns = 2

[node name="Label3" type="Label" parent="GridContainer2"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Character Blacklist:"
horizontal_alignment = 2

[node name="LineEdit_blacklist" type="LineEdit" parent="GridContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "abcABC!?$"

[node name="Label4" type="Label" parent="GridContainer2"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Password Length:"
horizontal_alignment = 2

[node name="SpinBox_length" type="SpinBox" parent="GridContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
min_value = 1.0
value = 32.0
allow_greater = true

[node name="Label5" type="Label" parent="GridContainer2"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Iteration:"
horizontal_alignment = 2

[node name="SpinBox_iteration" type="SpinBox" parent="GridContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Control2" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button_confirm" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
disabled = true
text = "Confirm"

[node name="Control" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Button_cancel" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
text = "Cancel"

[node name="Control3" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
unique_name_in_owner = true
initial_position = 2
size = Vector2i(314, 106)
ok_button_text = "Yes"
dialog_text = "This will override an existing Password
                       are you sure?"
cancel_button_text = "No"

[connection signal="text_changed" from="GridContainer/LineEdit_adress" to="." method="_on_relevant_text_changed"]
[connection signal="text_changed" from="GridContainer/LineEdit_name" to="." method="_on_relevant_text_changed"]
[connection signal="pressed" from="HBoxContainer/Button_confirm" to="." method="_on_button_confirm_pressed"]
[connection signal="pressed" from="HBoxContainer/Button_cancel" to="." method="_on_button_cancel_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
